# wechat-claude-obsidian-bot

./: .gitignore  CLAUDE.md  README.md  config.example.toml  launch_wcob.bat  launch_wcob.command  pyproject.toml  setup.sh
config/: prompt.md  settings.toml
docs/: two-backends-plan.md
spike/: README.md  litellm.yaml  run.sh  settings.toml
src/wechat_claude_obsidian_bot/: agent_tools.py  bot.py  capture_prompt.zh.md  claude_bot.py  cli.py  commands.py  config.py  contacts.py  document_in.py  echo_bot.py  login.py  media_in.py  preflight.py  prompting.py  providers.py  runlog.py  scheduler.py  schedules.py  session.py  settings.py  setup_keys.py  setup_tui.py  start.py  tui.py
src/wechat_claude_obsidian_bot/backends/: __init__.py  api.py  api_tools.py  base.py  claude_code.py
