[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-claude-obsidian-bot"
version = "0.1.0"
description = "Message your own WeChat bot and have a headless Claude Code agent organize it into your Obsidian vault"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Wilson Zheng" }]
keywords = ["wechat", "claude", "obsidian", "bot", "ilink", "clawbot"]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "weixin-ilink[qr]>=0.3.5",
    "claude-agent-sdk>=0.2",
]

[project.optional-dependencies]
# Local transcription fallback for voice messages WeChat didn't transcribe.
voice = [
    "weixin-ilink[voice]",
    "faster-whisper>=1.0",
]

[project.urls]
Repository = "https://github.com/WilsonZheng0327/wechat-claude-obsidian-bot"

[project.scripts]
wcob = "wechat_claude_obsidian_bot.claude_bot:main"
wcob-login = "wechat_claude_obsidian_bot.login:main"
wcob-echo = "wechat_claude_obsidian_bot.echo_bot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wechat_claude_obsidian_bot = ["capture_prompt.md", "capture_prompt.zh.md"]
