[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-claude-obsidian-bot"
version = "0.1.0"
description = "Message your own WeChat bot and have a headless Claude Code agent organize it into your Obsidian vault"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Wilson Zheng" }]
keywords = ["wechat", "claude", "obsidian", "bot", "ilink", "clawbot"]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "weixin-ilink[qr]>=0.3.5",
]

[project.optional-dependencies]
# Each backend is an extra so a user installs only the one they run. cli.py
# lazy-imports both and turns a missing extra into a "pip install" hint.
claude = ["claude-agent-sdk>=0.2"]
api = [
    "deepagents==0.6.12",           # pinned: 0.x, churns fast (decision in docs)
    "langgraph-checkpoint-sqlite>=3.1",
    "python-dotenv>=1.0",
]
# Provider integrations for the api backend — deepagents' init_chat_model needs
# the matching LangChain package. Install alongside `api`, e.g. .[api,api-openai].
api-openai = ["langchain-openai"]
api-google = ["langchain-google-genai"]
api-anthropic = ["langchain-anthropic"]
gui = ["textual>=8"]                # `wcob setup` terminal wizard
# Incoming PDF/Office docs -> Markdown at ingestion (document_in.py), so either
# backend can read them. Keep the format list in sync with document_in.CONVERTIBLE.
docs = ["markitdown[pdf,docx,pptx,xlsx]>=0.1"]
# The whole bring-your-own-key app in one extra — the API backend, every
# provider integration, the setup wizard, and document ingestion. This is what
# the double-click launcher (launch_wcob.command / launch_wcob.bat) installs via
# `uv run --extra app`, so a non-technical user needs no backend/provider choices
# at install time. Self-referential so it can't drift from the pieces above.
app = ["wechat-claude-obsidian-bot[api,api-openai,api-anthropic,api-google,gui,docs]"]

[project.urls]
Repository = "https://github.com/WilsonZheng0327/wechat-claude-obsidian-bot"

[project.scripts]
wcob = "wechat_claude_obsidian_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wechat_claude_obsidian_bot = ["capture_prompt.md", "capture_prompt.zh.md"]
